# LigidLight

./: CMakeLists.txt  README.md  pubspec.yaml
LigidLight/resources/Shaders/: ui.frag  ui.vert
LigidLight/src/: Main.cpp
LigidLight/src/Core/: Application.cpp  Application.hpp  ColorPalette.hpp  Gl.cpp  Gl.hpp  Main.cpp  Util.cpp  Util.hpp
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/ligidlight/: MainActivity.kt
android/app/src/profile/: AndroidManifest.xml
assets/shaders/: invert.glsl
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/core/: enterpage.dart
linux/: CMakeLists.txt  my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
